# robin

./: .NOTES.md  .codacy.yml  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  codecov.yml  package.xml  update.py
.github/workflows/: industrial_ci_action.yml
codesys/: paths.yml  robin.library  robin.project  robin.xml  start_update.py  types.yml  update.py
codesys/templates/: robin_inst.cpp  robin_node.cpp  shared_memory_inst.cpp  structs.h
include/robin/: robin.h  robin_publisher.h  robin_reader.h  robin_subscriber.h  robin_writer.h  semaphore.h  shared_memory.h  structs.h
msg/: Float64Array.msg  TestStruct.msg  TestStruct_arr.msg  TestStruct_foo.msg  TestSubStruct.msg
robin/: CMakeLists.txt  package.xml
robin_bridge/: CMakeLists.txt  package.xml
robin_bridge/include/robin_bridge/: robin.h  robin_publisher.h  robin_publisher.hpp  robin_subscriber.h  robin_subscriber.hpp  shared_memory.h  structs.h
robin_bridge/launch/: run.launch  run.sh
robin_bridge/msg/: AccelStampedArray.msg  TestStruct.msg
robin_bridge/src/: robin_node.cpp  robin_timer.cpp
robin_bridge/src/robin_bridge/: robin.cpp  robin_inst.cpp  robin_publisher.cpp  robin_subscriber.cpp  semaphore.cpp  shared_memory.cpp
robin_bridge/src/test/: test_robin.cpp  test_semaphore.cpp  test_shared_memory.cpp
robin_bridge/test/: all.test  robin.test  semaphore.test  shared_memory.test
robin_updater/: CMakeLists.txt  package.xml
robin_updater/cfg/: CMakeLists.txt  codesys_project.xml  package.xml  paths.yml  robin.xml  run.launch  run.sh  templates.yml  types.yml
robin_updater/src/robin_updater/: robin.py  srcgen.py  start_update.py  updater.py  variable.py  xmlparser.py
src/: conveyor_node.cpp  robin.cpp  robin_node.cpp  robin_timer.cpp
src/codesys/: example_project.xml  robin.library
src/robin/: robin.cpp  robin_inst.cpp  robin_publisher.cpp  robin_reader.cpp  robin_subscriber.cpp  robin_writer.cpp  semaphore.cpp  shared_memory.cpp  shared_memory_inst.cpp
src/test/: test_robin.cpp  test_semaphore.cpp  test_shared_memory.cpp
src/updater/: __init__.py  paths.yml  robin.py  robin.xml  srcgen.py  start_update.py  types.yml  update.py  updater.py  variable.py  xmlparser.py
src/updater/config/: paths.yml  robin.xml  templates.yml  types.yml
src/updater/templates/: robin_node.cpp  structs.h
test/: robin.test  semaphore.test  shared_memory.test  test_robin.cpp  test_robin.test
