<?xml version="1.0"?>
<package format="2">
  <name>robin</name>
  <version>0.2.0</version>
  <description>The Robin ROS-CODESYS bridge packages.</description>

  <maintainer email="henrique.domingos@inesctec.pt">Henrique Domingos</maintainer>
  
  <license>Apache 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/robin</url> -->
  <!-- <url type="bugtracker">https://github.com/ros-industrial/robin/issues</url> -->
  <!-- <url type="repository">https://github.com/ros-industrial/robin</url> -->

  <author email="paulo.d.ribeiro@inesctec.pt">Paulo Diogo Ribeiro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robin_bridge</exec_depend>
  <exec_depend>robin_updater</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
