<?xml version="1.0"?>
<package format="2">
  <name>robin_bridge</name>
  <version>0.2.0</version>
  <description>A ROS-CODESYS shared memory bridge.</description>

  <maintainer email="henrique.domingos@inesctec.pt">Henrique Domingos</maintainer>

  <license>Apache 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/robin</url> -->
  <!-- <url type="bugtracker">https://github.com/ros-industrial/robin/issues</url> -->
  <!-- <url type="repository">https://github.com/ros-industrial/robin</url> -->

  <author email="paulo.d.ribeiro@inesctec.pt">Paulo Diogo Ribeiro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
