<?xml version="1.0"?>
<package format="2">
  <name>robin_updater</name>
  <version>0.2.0</version>
  <description>An updater tool for the Robin bridge.</description>

  <maintainer email="paulo.d.ribeiro@inesctec.pt">Paulo Diogo Ribeiro</maintainer>

  <license>Apache 2.0</license>

  <!-- <url type="website">http://wiki.ros.org/robin</url> -->
  <!-- <url type="bugtracker">https://github.com/ros-industrial/robin/issues</url> -->
  <!-- <url type="repository">https://github.com/ros-industrial/robin</url> -->

  <author email="paulo.d.ribeiro@inesctec.pt">Paulo Diogo Ribeiro</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <exec_depend>python</exec_depend>
  <exec_depend>python-lxml</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
